[Fix]: Z-index in movil

--- a/css/header.sass
+++ b/css/header.sass
@@ -12,6 +12,8 @@ header
 		display: flex
 		justify-content: space-between
 		align-items: center
+		@media (max-width: $movil)
+			width: 80%
 		&_logo
 			width: 175px
 			height: 70px
