--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,11 @@ html body header .header-container {
   justify-content: space-between;
   align-items: center;
 }
+@media (max-width: 376px) {
+  html body header .header-container {
+    width: 80%;
+  }
+}
 html body header .header-container_logo {
   width: 175px;
   height: 70px;
